@@ -58,11 +58,6 @@ This is added to the <acronym title="HyperText Markup Language">HTML</acronym>
 title field. </td>
 </tr>
 <tr class="row4">
-<td class="col0 leftalign"><a name="desc_microsummary_short">Microsummary</a> </td>
-<td class="col1 leftalign">No documented definition
-at this time. </td>
-</tr>
-<tr class="row5">
 <td class="col0 leftalign"><a name="desc_site_disabled_msg">Site Disabled Message or <acronym title="Uniform Resource Locator">URL</acronym></a>
 </td>
 <td class="col1 leftalign">This contains the message
@@ -70,7 +65,7 @@ to display
 when a glFusion site is disabled. If the text begins with
 &#8220;http:&#8221; then visitors are redirected to that <acronym title="Uniform Resource Locator">URL</acronym>. </td>
 </tr>
-<tr><td><a name="desc_maintenance_mode"></a>Enable Maintenance Mode</td><td>Setting
+<tr class="row5"><td><a name="desc_maintenance_mode"></a>Enable Maintenance Mode</td><td>Setting
 this to TRUE will block all non-admin users from using the site.
 &nbsp;All non-admin users will see the Site Disabled Message or URL.
 &nbsp;Admin users will still be able to access all features of the
@@ -82,7 +77,7 @@ want to
 appear in the copyright notice of your site's footer. If not set,
 glFusion will use the current year. </td>
 </tr>
-<tr class="row7">
+<tr class="row6">
 <td class="col0 leftalign"><a name="desc_url_rewrite">Enable <acronym title="Uniform Resource Locator">URL</acronym> Rewrite</a>
 </td>
 <td class="col1 leftalign">glFusion includes a
